[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Sprite.gd" type="Script" id=2]
[ext_resource path="res://a_MontHeavy.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="Label" type="Label" parent="."]
margin_left = 436.0
margin_top = 24.0
margin_right = 464.0
margin_bottom = 38.0
rect_scale = Vector2( 3.72318, 2.98701 )
text = "TEST"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 829.0
margin_top = 12.0
margin_right = 1007.0
margin_bottom = 75.0
min_value = 1.0
value = 50.0

[node name="Button" type="Button" parent="."]
margin_left = 23.0
margin_top = 15.0
margin_right = 149.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "CLICK ME"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 493, 307 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Sprite"]
autostart = true

[connection signal="value_changed" from="HSlider" to="Sprite" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Button" to="Sprite" method="_on_Button_pressed"]
[connection signal="counter_changed" from="Sprite" to="Sprite" method="_on_Sprite_counter_changed"]
